--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1 id="page-title">The DOM</h1>
-  <p>hello,world</p>
-  <p>lorem ipsum</p>
-  <p class="error">this is an error message</p>
-  <dev class="content">
-    aiueo
-    <p>aiueo</p>
-    aiueo
-  </dev>
+  <h1>Async JavaScript</h1>
 
   <script src="sandbox.js"></script>
 </body>
